# FlyPRO-rs

./: CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml
crates/flypro-cli/: Cargo.toml
crates/flypro-core/: Cargo.toml
crates/flypro-core/src/: lib.rs
crates/flypro-core/src/assets/: configuration.rs  mod.rs
docs/: README.md  architecture.md  implementation.md  usb-capture-plan.md  usb-validation.md
flypro-cli/: Cargo.toml
flypro-cli/src/: device.rs  main.rs
flypro-core/: Cargo.toml  build.rs
flypro-core/assets/alg/: at25df128.alg  at25f1024.alg  at25pe.alg  at25sf321.alg  at25sl321.alg  at26df321.alg  at45dbxxb.alg  at45dbxxd.alg  at45dbxxe.alg  bl25wq40a.alg  br90xx.alg  by25q256fs.alg  ch9904.alg  ds25m4c.alg  en25q128.alg  en25q256.alg  en25qe32.alg  en25qx128.alg  en25qx256.alg  fd25q128.alg  fm24cxxd.alg  fm25ee.alg  fm25q128.alg  gd24cxx.alg  gd25b512mf.alg  gd25lb256e.alg  gd25lb256f.alg  gd25le128e.alg  gd25le255e.alg  gd25lx128j.alg  gd25q128.alg  gd25q256.alg  gd25r512mf.alg  gm25q128.alg  gt25q32.alg  gt25q40d.alg  hwt.alg  im25rwq.alg  is25p128.alg  is25p256.alg  (+52 more)
flypro-core/assets/cfg/: A25L032.cfg  A25LQ080.cfg  A25LQ32A.cfg  A25LQ64M-FE.cfg  AT25EU0081A.cfg  AT25FF321A.cfg  AT25QF128A.cfg  AT25QF641B.cfg  AT25QF641s.cfg  AT25QL0321C.cfg  AT25QL2561C.cfg  AT25QL321s.cfg  AT25SF128A.cfg  AT25SF161B.cfg  AT25SF641B.cfg  AT25SF641s.cfg  AT25SL0321C.cfg  AT25SL321s.cfg  AT25XX321s.cfg  BH25FQ128ES.cfg  BL25WQ05A.cfg  BL25WQ128A.cfg  BY25B128ES.cfg  BY25B64ES.cfg  BY25FB128EL.cfg  BY25FB256ES.cfg  BY25FB64ES.cfg  BY25FQ128EL.cfg  BY25FQ128GS.cfg  BY25FQ16ES.cfg  BY25FQ256ES.cfg  BY25FQ512ES.cfg  BY25FQ64ES.cfg  BY25FQM512ES.cfg  BY25Q10.cfg  BY25Q128BL.cfg  BY25Q128EL.cfg  BY25Q128ES.cfg  BY25Q128L.cfg  BY25Q16ES.cfg  (+349 more)
flypro-core/assets/device/: SP20.dev
flypro-core/assets/package/: PkgID20.ini
flypro-core/src/: auto_identify.rs  lib.rs  operations.rs  parameters.rs  protocol.rs  session.rs  transport.rs  usb.rs  usb_transport.rs
flypro-core/src/assets/: algorithm.rs  configuration.rs  defaults.rs  device_db.rs  embedded_algorithms.rs  embedded_configurations.rs  mod.rs  package_map.rs
(+1 files in other folders)
