[workspace]
members = ["crates/flypro-cli", "crates/flypro-core"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

[workspace.dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.40", features = ["derive"] }
crc32fast = "1.4.2"
encoding_rs = "0.8.35"
thiserror = "2.0.12"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"
