[package]
name = "flypro-cli"
description = "Command-line diagnostics for FlyPRO programmers and assets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "flypro"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
flypro-core = { path = "../flypro-core" }
serde_json.workspace = true

[lints]
workspace = true
