[package]
name = "flypro-cli"
description = "Command-line tooling for SP10/SP20 programmers and FlyPro assets"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[[bin]]
name = "flypro"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
chrono.workspace = true
flypro-core = { path = "../flypro-core" }
serde_json.workspace = true

[lints]
workspace = true
