[package]
name = "flypro-core"
description = "FlyPro asset and protocol support for SP10/SP20 programmers"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[dependencies]
crc32fast.workspace = true
encoding_rs.workspace = true
nusb.workspace = true
serde.workspace = true
thiserror.workspace = true

[lints]
workspace = true
