[package]
name = "flypro-core"
description = "Evidence-driven FlyPRO asset, protocol, and session abstractions"
version.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
crc32fast.workspace = true
encoding_rs.workspace = true
thiserror.workspace = true

[lints]
workspace = true
